chore: Adjust linux path

--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -235,7 +235,7 @@ jobs:
         git apply ../patches/dbg-proxy-net5.patch
         git apply ../patches/restore-jsinterop-invokejsunmarshalled.patch
         git apply ../patches/fix-additional-emscripten-exports.patch
-        git apply ..\patches\enable-log-profiler.patch
+        git apply ../patches/enable-log-profiler.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
