--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -231,7 +231,7 @@ jobs:
 
         git apply ../patches/enable-idbfs.patch
         git apply ../patches/dbg-proxy-net5.patch
-        git apply ..\patches\enable-log-profiler.patch
+        git apply ../patches/enable-log-profiler.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
