--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -77,6 +77,7 @@ jobs:
 
         git apply ..\patches\enable-idbfs.patch
         git apply ..\patches\dbg-proxy-net5.patch
+        git apply ..\patches\fix-adjust-windows-build.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
@@ -152,7 +153,7 @@ jobs:
   ##
   ## Build Job
   ##
-  build_job:
+  build_linux_job:
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
     container: 'unoplatform/wasm-build:2.3'
@@ -304,7 +305,7 @@ jobs:
   ##
   release_job:
     if: github.event_name == 'push'
-    needs: [build_job,build_windows_job]
+    needs: [build_linux_job,build_windows_job]
     runs-on: ubuntu-latest
     environment:
         name: Release
