--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -37,7 +37,7 @@ jobs:
          # - BUILD_CONFIGURATION: Debug # Not yet supported
 
     steps:
-    - name: Setup .NET Core SDK ${{ env.DOTNETSDK_VERSION }}
+    - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1.7.2
       with:
         dotnet-version: ${{ env.DOTNETSDK_VERSION }}
@@ -164,7 +164,7 @@ jobs:
          # - BUILD_CONFIGURATION: Debug
 
     steps:
-    - name: Setup .NET Core SDK  ${{ env.DOTNETSDK_VERSION }}
+    - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1.7.2
       with:
         dotnet-version:  ${{ env.DOTNETSDK_VERSION }}
