--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -81,6 +81,7 @@ jobs:
         git apply ..\patches\enable-idbfs.patch
         git apply ..\patches\dbg-proxy-net5.patch
         git apply ..\patches\fix-adjust-windows-build.patch
+        git apply ..\patches\restore-jsinterop-invokejsunmarshalled.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
@@ -230,6 +231,7 @@ jobs:
 
         git apply ../patches/enable-idbfs.patch
         git apply ../patches/dbg-proxy-net5.patch
+        git apply ../patches/restore-jsinterop-invokejsunmarshalled.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
