fix: Expose IDBFS in es6 bootstrapping

--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -84,6 +84,7 @@ jobs:
         git apply ..\patches\restore-jsinterop-invokejsunmarshalled.patch
         git apply ..\patches\fix-additional-emscripten-exports.patch
         git apply ..\patches\enable-log-profiler.patch
+        git apply ..\patches\fix-expose-idbfs-es6.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
@@ -236,6 +237,7 @@ jobs:
         git apply ../patches/restore-jsinterop-invokejsunmarshalled.patch
         git apply ../patches/fix-additional-emscripten-exports.patch
         git apply ../patches/enable-log-profiler.patch
+        git apply ../patches/fix-expose-idbfs-es6.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
