chore: Update to latest dotnet/runtime

--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -13,14 +13,14 @@ on:
       - release/**
             
 env:
-  EMSDK_VERSION: 2.0.23 # align with https://github.com/dotnet/runtime/blob/4ae9b33cc5bd291abd18d5b4353adf780f6810bc/src/mono/wasm/emscripten-version.txt
-  DOTNETRUNTIME_COMMIT: 942430c5253fe58c11e32fda265bf816a13cb2b4
+  EMSDK_VERSION: 3.1.4 # align with https://github.com/dotnet/runtime/blob/4ae9b33cc5bd291abd18d5b4353adf780f6810bc/src/mono/wasm/emscripten-version.txt
+  DOTNETRUNTIME_COMMIT: c3cc9fd5d64df359c54b6d0518db75641e04bbc3
   DOTNETSDK_VERSION: 6.0.200
 
   # Original location: https://github.com/dotnet/runtime/blob/942430c5253fe58c11e32fda265bf816a13cb2b4/eng/Version.Details.xml#L235
-  LINKER_COMMIT: a709836737bf8ccc58d9b8c7d5e4bbabc8e28985
+  LINKER_COMMIT: 5baeb5e08b4a5fd6995e6247c7cb41b673c5ecdc
 
-  ADDITIONAL_BUILD_ARGS: '/p:MonoEnableAssertMessages=true /p:WasmEnableES6=true'
+  ADDITIONAL_BUILD_ARGS: '/p:MonoEnableAssertMessages=true /p:WasmEnableES6=true /p:WasmExceptionHandling=true'
 
 jobs:
   ##
