fix: expose emscripten exports on global namespace

--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -88,6 +88,7 @@ jobs:
         git apply ..\patches\enable-log-profiler.patch
         git apply ..\patches\fix-expose-idbfs-es6.patch
         git apply ..\patches\issue-66319.patch
+        git apply ..\patches\pr-66868.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
@@ -243,6 +244,7 @@ jobs:
         git apply ../patches/enable-log-profiler.patch
         git apply ../patches/fix-expose-idbfs-es6.patch
         git apply ../patches/issue-66319.patch
+        git apply ../patches/pr-66868.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
