--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -86,6 +86,7 @@ jobs:
         git apply ..\patches\restore-jsinterop-invokejsunmarshalled.patch
         git apply ..\patches\fix-additional-emscripten-exports.patch
         git apply ..\patches\enable-log-profiler.patch
+        git apply ..\patches\net7-debugger-compat.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
@@ -193,6 +194,9 @@ jobs:
         sudo add-apt-repository ppa:git-core/ppa
         sudo apt update;
         sudo apt install -y git
+
+    - name: Trust My Directory
+       run: export GIT_CEILING_DIRECTORIES=/__w 
         
     - uses: actions/checkout@v2
       with:
@@ -239,6 +243,7 @@ jobs:
         git apply ../patches/restore-jsinterop-invokejsunmarshalled.patch
         git apply ../patches/fix-additional-emscripten-exports.patch
         git apply ../patches/enable-log-profiler.patch
+        git apply ../patches/net7-debugger-compat.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
