--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -85,6 +85,7 @@ jobs:
         git apply ..\patches\fix-adjust-windows-build.patch
         git apply ..\patches\restore-jsinterop-invokejsunmarshalled.patch
         git apply ..\patches\fix-additional-emscripten-exports.patch
+        git apply ..\patches\fix-additional-emscripten-default-exports.patch
         git apply ..\patches\enable-log-profiler.patch
         git apply ..\patches\net7-debugger-compat.patch
         git apply ..\patches\69709-bump-icu.patch
@@ -243,6 +244,7 @@ jobs:
         git apply ../patches/dbg-proxy-net5.patch
         git apply ../patches/restore-jsinterop-invokejsunmarshalled.patch
         git apply ../patches/fix-additional-emscripten-exports.patch
+        git apply ../patches/fix-additional-emscripten-default-exports.patch
         git apply ../patches/enable-log-profiler.patch
         git apply ../patches/net7-debugger-compat.patch
         git apply ../patches/69709-bump-icu.patch
