chore: Apply pr68787 patch

--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -88,7 +88,7 @@ jobs:
         git apply ..\patches\enable-log-profiler.patch
         git apply ..\patches\net7-debugger-compat.patch
         git apply ..\patches\69709-bump-icu.patch
-        # git apply ..\patches\threading-atomics.patch
+        git apply ..\patches\pr-68787.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
@@ -251,7 +251,7 @@ jobs:
         git apply ../patches/enable-log-profiler.patch
         git apply ../patches/net7-debugger-compat.patch
         git apply ../patches/69709-bump-icu.patch
-        # git apply ../patches/threading-atomics.patch
+        git apply ../patches/pr-68787.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
