--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -89,6 +89,7 @@ jobs:
         git apply ..\patches\net7-debugger-compat.patch
         git apply ..\patches\69709-bump-icu.patch
         git apply ..\patches\70375-baseUrl-configuration.patch
+        git apply ..\patches\70926-aot-crash.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
@@ -252,6 +253,7 @@ jobs:
         git apply ../patches/net7-debugger-compat.patch
         git apply ../patches/69709-bump-icu.patch
         git apply ../patches/70375-baseUrl-configuration.patch
+        git apply ../patches/70926-aot-crash.patch
         git config --global user.email "ci@platform.uno"
         git config --global user.name "Uno Platform CI"
         git add .
