--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -66,9 +66,12 @@ jobs:
         cd linker/src/linker
         dotnet msbuild /r /bl /p:Configuration=Release
 
-    - name: Remove chocolatey
+    - name: Remove ccache from chocolatey
       run: |
-        C:\ProgramData\chocolatey\bin\ccache.exe -h
+        # ccache installed by chocolatey in hosted agent is interfering with emscripten
+        # Uninstalling does not work, as it's not registered in chocolatey.
+        # So we'll delete it for now until we can find where it's actually used by 
+        # the runtime's build.
         del C:\ProgramData\chocolatey\bin\ccache.exe
 
     - name: Clone dotnet/runtime
