--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -91,7 +91,7 @@ jobs:
         git apply ..\patches\enable-idbfs.patch
         git apply ..\patches\dbg-proxy-net5.patch
         git apply ..\patches\fix-adjust-windows-build.patch
-        git apply ..\patches\restore-jsinterop-invokejsunmarshalled.patch
+        git apply --whitespace=fix ..\patches\restore-jsinterop-invokejsunmarshalled.patch
         git apply ..\patches\fix-additional-emscripten-exports.patch
         git apply ..\patches\enable-log-profiler.patch
         git apply ..\patches\net7-debugger-compat.patch
