--- a/.github/workflows/runtime-ci.yml
+++ b/.github/workflows/runtime-ci.yml
@@ -78,31 +78,8 @@ jobs:
       run: |
         git clone --recursive https://github.com/dotnet/runtime -c core.longpaths=true 
 
-    - name: Apply Patches
-      run: |
-        cd runtime
-        git reset --hard $env:DOTNETRUNTIME_COMMIT
-
-        Invoke-Expression "git rev-parse --short HEAD" | Out-String -NoNewLine -OutVariable BASE_DOTNET_SHORT_COMMIT
-
-        echo dotnet/runtime base SHA1: $BASE_DOTNET_SHORT_COMMIT
-        echo "BASE_DOTNET_SHORT_COMMIT=$BASE_DOTNET_SHORT_COMMIT" >> $env:GITHUB_ENV
-
-        git apply ..\patches\enable-idbfs.patch
-        git apply ..\patches\dbg-proxy-net5.patch
-        git apply ..\patches\fix-adjust-windows-build.patch
-        git apply --whitespace=fix ..\patches\restore-jsinterop-invokejsunmarshalled.patch
-        git apply ..\patches\fix-additional-emscripten-exports.patch
-        git apply ..\patches\enable-log-profiler.patch
-        git apply ..\patches\net7-debugger-compat.patch
-        git apply ..\patches\fix-disable-ccache.patch
-        git config --global user.email "ci@platform.uno"
-        git config --global user.name "Uno Platform CI"
-        git add .
-        git commit -m "apply patches"
-
-        Invoke-Expression "git rev-parse --short HEAD" | Out-String -NoNewLine -OutVariable PATCHED_DOTNET_SHORT_COMMIT
-        echo dotnet/runtime patched SHA1: $PATCHED_DOTNET_SHORT_COMMIT
+    - run:  ./scripts/apply-patches.ps1
+      shell: pwsh
 
     - name: 'Setup Emscripten'
       run: |
@@ -241,29 +218,9 @@ jobs:
     - name: Clone dotnet/runtime
       run: |
         git clone --recursive https://github.com/dotnet/runtime
-
-    - name: Apply Patches
-      run: |
-        set -e
-        cd runtime
-        git reset --hard $DOTNETRUNTIME_COMMIT
-
-        echo dotnet/runtime base SHA1: `git rev-parse HEAD`
-        BASE_DOTNET_SHORT_COMMIT=`git rev-parse --short HEAD`
-        echo "BASE_DOTNET_SHORT_COMMIT=$BASE_DOTNET_SHORT_COMMIT" >> $GITHUB_ENV
-
-        git apply ../patches/enable-idbfs.patch
-        git apply ../patches/dbg-proxy-net5.patch
-        git apply ../patches/restore-jsinterop-invokejsunmarshalled.patch
-        git apply ../patches/fix-additional-emscripten-exports.patch
-        git apply ../patches/enable-log-profiler.patch
-        git apply ../patches/net7-debugger-compat.patch
-        git apply ../patches/fix-disable-ccache.patch
-        git config --global user.email "ci@platform.uno"
-        git config --global user.name "Uno Platform CI"
-        git add .
-        git commit -m "apply patches"
-        echo dotnet/runtime patched SHA1: `git rev-parse HEAD`
+        
+    - run:  ./scripts/apply-patches.ps1
+      shell: pwsh
 
     - name: Install cmake 3.16 
       run: |
